# Experiments

./: README
R/bnb/: bnbPlots.R
cpp/bamtools_test/: CMakeLists.txt
cpp/bamtools_test/src/: CMakeLists.txt  main.cpp
